objects/BMCServiceDesk__StandardResolution__c.object
<CustomObject>
    <description>This object allows you to store data for standard resolution records.</description>
    <fields>
        <fullName>BMCServiceDesk__FKStandardDescription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>StandardDescription</label>
        <referenceTo>BMCServiceDesk__StandardDescription__c</referenceTo>
        <relationshipLabel>Standard Resolutions</relationshipLabel>
        <relationshipName>Standard_Resolutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__StandardDescription_ID__c</fullName>
        <formula>BMCServiceDesk__FKStandardDescription__r.BMCServiceDesk__category_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Description ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if the standard resolution record is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__resolution__c</fullName>
        <inlineHelpText>Use this field to enter a standard resolution for the standard description. This resolution will be added to the standard description&apos;s list of standard resolutions.</inlineHelpText>
        <label>Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Standard Resolution</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Standard Resolution ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standard Resolutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>